# c2pie

./: .env-example  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: lint-and-test.yml  publish-package.yml  publish-release.yml  test-readme-steps.yml
c2pie/: main.py  signing.py
example_app/: .example-app-env
test_application/: jpeg_test_app.py  pdf_test_app.py  test_app.py
tests/c2pa/: assertion_store_test.py  assertion_test.py  claim_signature_test.py  claim_test.py
