[tool.poetry]
name = "tc_c2pa_py"
version = "0.2.0"
description = "The TC-C2PA-Py is python library which provide C2PA standard functionality."
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
authors = ["Olga Kuzmicheva <vgubin@tourmalinecore.com>", "Vladimir Gubin <vgubin@tourmalinecore.com>",
  "Oleg Kliavlin <vgubin@tourmalinecore.com>", "Dmitriy Starodubtcev <vgubin@tourmalinecore.com>"]

[project]
name = "tc_c2pa_py"
authors = [ 
  { name="Olga Kuzmicheva ", email="vgubin@tourmalinecore.com" },
  { name="Vladimir Gubin", email="vgubin@tourmalinecore.com" },
  { name="Oleg Kliavlin", email="vgubin@tourmalinecore.com" },
  { name="Dmitriy Starodubtcev", email="vgubin@tourmalinecore.com" },
]

[project.urls]
Homepage = "https://github.com/TourmalineCore/tc-c2pa-py"
Issues = "https://github.com/TourmalineCore/tc-c2pa-py/issues"

[tool.poetry.dependencies]
python = "^3.9"
pytest = "^7.4.0"
cbor2 = "^5.6.3"
cryptography = "^42.0.5"
pytz = "^2024.1"
twine = "^6.1.0"

[tool.poetry.dev-dependencies]
pytest = "^7.4.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"